# crib-calc

./: .gitignore  .yarnrc.yml  CLAUDE.md  GEMINI.md  README.md  cli.py  jest.config.js  package.json  pyproject.toml  tsconfig.json
crib_calc/: card.py  rank_map.py  suit_map.py
crib_calc/constants/: testing_hands.py
crib_calc/scoring/: __init__.py  get_expected_hand_score.py  get_simplified_discard_score.py  score_fifteens.py  score_flush.py  score_nobs.py  score_pairs.py  score_runs.py  suggest_optimal_hand.py
crib_calc/utils/: generate_deck.py  get_all_hand_discard_combinations.py  get_combinations.py  parse_card.py
src/: cli.test.ts  cli.ts  index.ts
src/constants/: testingHands.ts
src/interfaces/: card.interface.ts
src/scoring/: getExpectedHandScore.ts  getSimplifiedDiscardScore.ts  index.ts  scoreFifteens.test.ts  scoreFifteens.ts  scoreFlush.ts  scoreNobs.ts  scorePairs.ts  scoreRuns.ts  scoring.test.ts  suggestOptimalHand.test.ts  suggestOptimalHand.ts
src/types/: rankMap.ts  suitMap.ts
src/utils/: generateDeck.ts  getAllHandDiscardCombinations.ts  getCombinations.ts  parseCard.ts
tests/: test_cli.py  test_scoring.py  test_suggest_optimal_hand.py
