[project]
name = "crib-calc"
version = "1.0.0"
description = "Cribbage hand scorer and optimal keep suggester"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
crib-calc = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
